--- a/pokedexLaunchX.html
+++ b/pokedexLaunchX.html
@@ -6,30 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex LaunchX</title>
 
-    <style>
-        progress{
-            transform: rotate(270deg);
-            max-width: 50px;
-            padding: 20px 0px;
-
-        }
-        .estadisticas{
-            display: flex;
-            justify-content: space-evenly;
-        }
-        .conte_estadis{
-           display: flex;
-            flex-direction: column-reverse;
-            align-items: center;
-        }
-        .pokedex{
-            display: flex;
-            padding: 50px;
-        }
-        .pokedex__cara1,.pokedex__cara2{
-            flex: 0 0 calc(50% );
-        }
-    </style>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
 
