Add abilities and fix name issue

--- a/pokedexLaunchX.html
+++ b/pokedexLaunchX.html
@@ -35,35 +35,43 @@
             <div id="stats" class="estadisticas">
                 <div class="conte_estadis">
                     <h4>HP</h4>
-                    <progress id="hp" max="100" ></progress>
+                    <h4 id="hp_num"></h4>
+                    <progress id="hp" max="150" ></progress>
                 </div>
                 <div class="conte_estadis">
                     <h4>Attack</h4>
-                    <progress id="attack" max="100" ></progress>
+                    <h4 id="attack_num"></h4>
+                    <progress id="attack" max="150" ></progress>
                 </div>
                 <div class="conte_estadis">
                     <h4>Defense</h4>
-                    <progress id="defense" max="100" ></progress>
+                    <h4 id="defense_num"></h4>
+                    <progress id="defense" max="150" ></progress>
                 </div>
                 <div class="conte_estadis">
                     <h4>Special Attack</h4>
-                    <progress id="special-attack" max="100" ></progress>
+                    <h4 id="special-attack_num"></h4>
+                    <progress id="special-attack" max="150" ></progress>
                 </div>
                 <div class="conte_estadis">
                     <h4>Special Defense</h4>
-                    <progress id="special-defense" max="100" ></progress>
+                    <h4 id="special-defense_num"></h4>
+                    <progress id="special-defense" max="150" ></progress>
                 </div>
                 <div class="conte_estadis">
                     <h4>Speed</h4>
-                    <progress id="speed" max="100" > hp</progress>
+                    <h4 id="speed_num"></h4>
+                    <progress id="speed" max="150" > hp</progress>
                 </div>
 
             </div>
 
         </div>
         <div class="pokedex__cara2-movimientos" id="movimientos">
+            <h2>Habilidades</h2>
+            <div id="cuadricula_movimientos" >
 
-
+            </div>
         </div>
     </div>
 </div>
