--- a/pokedexLaunchX.html
+++ b/pokedexLaunchX.html
@@ -23,7 +23,7 @@
         <div class="pokedex__cara1-head"></div>
         <div class="conte_img_pokemon">
             <img src="img/pokeball.png" alt="" id="pokeImg" width="400">
-            <h3 id="nombrePokemon">Nombre: desconocido</h3>
+            <h3 id="nombrePokemon">########</h3>
         </div>
         <input type="text" placeholder="pikachu" id="pokeName" name="pokeName" value="pikachu">
         <button onclick="fetchPokemon()">Buscar Pokemon</button>
@@ -34,34 +34,40 @@
             <h4>Fraqueza:</h4>
             <div id="stats" class="estadisticas">
                 <div class="conte_estadis">
-                    <h4>HP</h4>
+
                     <h4 id="hp_num"></h4>
                     <progress id="hp" max="150" ></progress>
+                    <h4 class="stat_name" >HP</h4>
                 </div>
                 <div class="conte_estadis">
-                    <h4>Attack</h4>
+
                     <h4 id="attack_num"></h4>
                     <progress id="attack" max="150" ></progress>
+                    <h4 class="stat_name" >Attack</h4>
                 </div>
                 <div class="conte_estadis">
-                    <h4>Defense</h4>
+
                     <h4 id="defense_num"></h4>
                     <progress id="defense" max="150" ></progress>
+                    <h4 class="stat_name">Defense</h4>
                 </div>
                 <div class="conte_estadis">
-                    <h4>Special Attack</h4>
+
                     <h4 id="special-attack_num"></h4>
                     <progress id="special-attack" max="150" ></progress>
+                    <h4 class="stat_name">Special Attack</h4>
                 </div>
                 <div class="conte_estadis">
-                    <h4>Special Defense</h4>
+
                     <h4 id="special-defense_num"></h4>
                     <progress id="special-defense" max="150" ></progress>
+                    <h4 class="stat_name">Special Defense</h4>
                 </div>
                 <div class="conte_estadis">
-                    <h4>Speed</h4>
+
                     <h4 id="speed_num"></h4>
                     <progress id="speed" max="150" > hp</progress>
+                    <h4 class="stat_name">Speed</h4>
                 </div>
 
             </div>
